// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`succeeds on an empty package 1`] = `
{
  "licensesUsed": {},
  "success": true,
  "unusedIgnores": [],
}
`;

exports[`succeeds when all licenses are valid 1`] = `
{
  "licensesUsed": {},
  "success": true,
  "unusedIgnores": [],
}
`;

exports[`succeeds when all packages are ignored 1`] = `
{
  "licensesUsed": {},
  "success": true,
  "unusedIgnores": [],
}
`;

exports[`succeeds when licenses are valid or packages are ignored 1`] = `
{
  "licensesUsed": {},
  "success": true,
  "unusedIgnores": [],
}
`;

exports[`warns on unused ignores 1`] = `
{
  "licensesUsed": {},
  "success": true,
  "unusedIgnores": [
    "foo@1.0.0",
  ],
}
`;
